--- a/TrackballScroll/TrackballScroll.csproj
+++ b/TrackballScroll/TrackballScroll.csproj
@@ -73,19 +73,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
+    <Compile Include="Sources\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MouseHookBase.cs" />
-    <Compile Include="MouseHookTrackballScroll.cs" />
-    <Compile Include="NativeMethods.cs" />
+    <Compile Include="Sources\MouseHookBase.cs" />
+    <Compile Include="Sources\MouseHookTrackballScroll.cs" />
+    <Compile Include="Sources\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="WinAPI.cs" />
+    <Compile Include="Sources\WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
