issue #16 work around

--- a/TrackballScroll/App.config
+++ b/TrackballScroll/App.config
@@ -19,6 +19,9 @@
             <setting name="preferAxis" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="emulateMiddleButton" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TrackballScroll.Properties.Settings>
     </userSettings>
 </configuration>
