--- a/TrackballScroll/Properties/Settings.settings
+++ b/TrackballScroll/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="preferAxis" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="emulateMiddleButton" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
