--- a/TrackballScroll/App.config
+++ b/TrackballScroll/App.config
@@ -1,27 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="TrackballScroll.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="TrackballScroll.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
         <TrackballScroll.Properties.Settings>
-            <setting name="useX1" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="useX2" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="preferAxis" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="emulateMiddleButton" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </TrackballScroll.Properties.Settings>
+			<setting name="emulateMiddleButton" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="preferAxis" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="reverseVertical" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="useX1" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="useX2" serializeAs="String">
+				<value>True</value>
+			</setting>
+		</TrackballScroll.Properties.Settings>
     </userSettings>
 </configuration>
