--- a/TrackballScroll/Properties/Settings.settings
+++ b/TrackballScroll/Properties/Settings.settings
@@ -1,23 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<SettingsFile CurrentProfile="(Default)" GeneratedClassNamespace="TrackballScroll.Properties" GeneratedClassName="Settings" xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
+﻿<?xml version='1.0' encoding='utf-8'?>
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TrackballScroll.Properties" GeneratedClassName="Settings">
+  <Profiles />
   <Settings>
-    <Setting Name="emulateMiddleButton" Type="System.Boolean" Scope="User" Roaming="false">
+    <Setting Name="useX1" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="preferAxis" Type="System.Boolean" Scope="User" Roaming="false">
+    <Setting Name="useX2" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="reverseVertical" Type="System.Boolean" Scope="User" Roaming="false">
+    <Setting Name="preferAxis" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="emulateMiddleButton" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="reverseVerticalScroll" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="useX1" Type="System.Boolean" Scope="User" Roaming="false">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="useX2" Type="System.Boolean" Scope="User" Roaming="false">
-      <Value Profile="(Default)">True</Value>
+    <Setting Name="reverseHorizontalScroll" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
